--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <string name="hello">Hello World, DynamicGraphActivity!</string>
-    <string name="app_name">DynamicGraph</string>
+    <string name="app_name">DynamicData</string>
 
 </resources>
